增加部门模块，修改组织架构

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -10,8 +10,9 @@ server:
       timeout: 1m
 spring:
   redis:
-    host: 10.10.23.157
+    host: 10.10.60.54
     port: 6379
+    #database: 2
   application:
     name: fssc-umc
   datasource:
